fix: remove row-gap

--- a/packages/components-css/navigation-list/_mixin.scss
+++ b/packages/components-css/navigation-list/_mixin.scss
@@ -8,19 +8,18 @@
   list-style: none;
   margin-block: 0;
   padding-inline: 0;
-  row-gap: var(--rhc-navigation-list-row-gap, var(--rhc-space-100));
   &:last-child {
-    border-block-end-color: var(--rhc-navigation-list-item-border-color, var(--rhc-color-grijs-300));
-    border-block-end-style: solid;
-    border-block-end-width: var(--rhc-navigation-list-item-border-width, var(--rhc-border-width-default));
+    border-block-start-color: var(--rhc-navigation-list-item-border-color, var(--rhc-color-grijs-300));
+    border-block-start-style: solid;
+    border-block-start-width: var(--rhc-navigation-list-item-border-width, var(--rhc-border-width-default));
   }
 }
 @mixin rhc-navigation-list__item {
   align-items: center;
   background-color: var(--rhc-navigation-list-item-background-color, var(--rhc-color-canvas));
-  border-block-start-color: var(--rhc-navigation-list-item-border-color, var(--rhc-color-grijs-300));
-  border-block-start-style: solid;
-  border-block-start-width: var(--rhc-navigation-list-item-border-width, var(--rhc-border-width-default));
+  border-block-end-color: var(--rhc-navigation-list-item-border-color, var(--rhc-color-grijs-300));
+  border-block-end-style: solid;
+  border-block-end-width: var(--rhc-navigation-list-item-border-width, var(--rhc-border-width-default));
   color: var(--rhc-navigation-list-item-color, var(--rhc-color-foreground-subdued));
   column-gap: var(--rhc-navigation-list-item-column-gap, var(--rhc-space-100));
   display: flex;
